<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Used in app -->
    <string name="app_name" translatable="false">GymTrim</string>

    <!-- Plan -->
    <string name="fragment_plans_header">Plans</string>
    <string name="search_plans">Search for a plan</string>
    <string name="new_plan">New plan</string>
    <!-- AddPlan & EditPlan -->
    <string name="add_plan_header">Add a new plan</string>
    <string name="get_plan_name">Enter name</string>
    <string name="get_reminder_time">Reminder</string>
    <string name="edit_plan_header">Edit plan</string>
    <string name="error_missing_exercises">Please add some exercises.</string>
    <string name="add_exercise">Add an exercise</string>
    <string name="new_training">New Training</string>
    <!-- Exercise selector bottom sheet dialog -->
    <string name="header_exercise_selector">Select Exercise</string>
    <!-- Display exercise values bottom sheet dialog -->
    <string name="table_repetitions_title">Repetitions:</string>
    <string name="table_weight_title">Weight:</string>
    <string name="table_time_title">Time:</string>
    <string name="table_distance_title">Distance:</string>
    <string name="add_another_repetition">Add repetition</string>

    <!-- Training -->
    <string name="finish_training">Finish</string>

    <!-- Exercise -->
    <string name="fragment_exercises_header">Exercises</string>
    <string name="error_missing_name">Please enter a name.</string>
    <string name="new_exercise">New exercise</string>
    <!-- AddExercise & EditExercise -->
    <string name="add_new_exercise_header">Add new Exercise</string>
    <string name="get_exercise_name">Enter name</string>
    <string name="checkBox_note_weight">Note weight</string>
    <string name="checkBox_note_distance">Note distance</string>
    <string name="checkBox_note_time">Note time</string>
    <string name="checkBox_note_repetitions">Note repetitions</string>
    <string name="edit_exercise_header">Edit exercise</string>

    <!-- Data -->
    <string name="calculate_BMI">Calculate body mass index (BMI)</string>
    <string name="calculate_WHtR">Calculate waist to height ratio (WHtR)</string>
    <string name="calculate_WHR">Calculate waist to hip ratio (WHR)</string>
    <string name="data_section_training_data">Training data</string>
    <string name="nothing_calculated_yet">Nothing calculated yet.</string>
    <string name="no_warranty_note">This values are only for orientation. There is no warranty for their correctness.</string>
    <string name="get_waist_girth">Waist circumference in cm</string>
    <string name="error_missing_data">Please enter all data.</string>
    <!-- BMI -->
    <string name="get_size">Size in m:</string>
    <string name="get_weight">Weight in kg:</string>
    <string name="calculated_BMI">Your BMI:</string>
    <!-- WHtR -->
    <string name="get_age">Age:</string>
    <string name="get_height">Height in cm:</string>
    <string name="table_underweight">Underweight:</string>
    <string name="table_normal_weigt">Normal weight:</string>
    <string name="table_overweight">Overweight:</string>
    <string name="table_adiposity">Adiposity:</string>
    <string name="table_heavy_adiposity">Severe adiposity:</string>
    <string name="calculated_WHtR">Your WHtR:</string>
    <!-- WHR -->
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="get_hip_girth">Hip circumference in cm</string>
    <string name="WHR_information_female">For woman: WHR should be primorial to 0.85</string>
    <string name="WHR_information_male">For man: WHR should be primorial to 1.0</string>
    <string name="calculated_WHR">Your WHR:</string>
    <!-- Training data -->
    <string name="training_data_last_trained">Last time trained:</string>
    <string name="training_data_label_weight_average">Average weight per umpteenth training</string>
    <string name="training_data_average_weight_header">Average weight:</string>
    <string name="training_data_average_time_header">Average time:</string>
    <string name="training_data_average_distance_header">Average distance:</string>
    <string name="training_data_volume_header">Volume:</string>
    <string name="training_data_label_time_average">Average time per umpteenth training</string>
    <string name="training_data_label_distance_average">Average distance per umpteenth training</string>
    <string name="training_data_label_volume">Average volume per umpteenth training</string>

    <!-- Navigation bar -->
    <string name="navigationButton_plans">Plans</string>
    <string name="navigationButton_exercises">Exercises</string>
    <string name="navigationButton_data">Training data</string>

    <!-- Menu: Headers of information and settings activity -->

    <!-- Settings -->
    <string name="settings_header">Settings</string>
    <string name="settings_category_surface_and_appearance">Surface and appearance</string>
    <string name="settings_category_experience">Experience</string>
    <string name="settings_category_experience_enable_reminder">Toggle reminder On/Off</string>
    <string name="settings_toggle_light_dark_mode">Toggle light/dark Mode</string>
    <string name="settings_category_data">Data</string>
    <string name="settings_export_data">Export training data</string>
    <string name="settings_import_data">Import training data</string>
    <string name="settings_delete_data">Delete data</string>
    <string name="reset_all_settings_callback">Are you sure you want to reset all settings?</string>
    <string name="delete_all_data_callback">Do you really want to remove all data?</string>
    <string name="alertdialog_export_header">What do you want to export?</string>
    <string name="alertdialog_import_header">What do you want to import?</string>
    <string name="settings_exporting_successful">Successful exported</string>
    <string name="settings_importing_successful">Successful imported</string>
    <string name="settings_reminder_vibrate">Vibrate</string>
    <!-- Arrays -->
    <string name="settings_language_selector_default_language">System language</string>
    <string name="settings_language_selector_english">english</string>
    <string name="settings_language_selector_german">German</string>
    <string name="settings_language_selector_spanish">Spanish</string>
    <string name="array_translated_notification_beep">notification beep by Universfield</string>
    <string name="array_translated_message">message by supremetylewiss</string>
    <string name="array_translated_confirm_notification_choice_or_pop_up_sound_effect">Confirm, Notification, Choice or Pop-up Sound Effect by Lesiakower</string>
    <string name="array_translated_notification_sound_3">Notification Sound 3 by BenKirb</string>
    <string name="array_translated_error_call_to_attention">error call to attention by Universfield</string>
    <string name="array_translated_new_message_31">New Message 31 by Tuomas_Data</string>
    <string name="array_translated_notification_4">notification #4 by Universfield</string>
    <string name="array_translated_silent">Silent</string>

    <!-- Information -->
    <string name="informations_header">About</string>
    <string name="developer_name">by Fabian Roland and slegarraga</string>
    <string name="informations_app_version">Version:</string>
    <string name="informations_link_to_source_code">Source code and README</string>
    <string name="informations_link_to_bug_report">Report a bug</string>
    <string name="informations_link_to_license">License</string>
    <string name="informations_link_to_feature_request">Request a feature</string>
    <string name="informations_category_app_informations">App information</string>
    <string name="informations_category_contributing">Contributing</string>
    <string name="informations_link_to_latest_release">Latest release</string>
    <string name="informations_category_releases">Releases</string>
    <string name="informations_link_to_release_page">All releases</string>

    <!-- PlansRecyclerView -->
    <string name="last_training_date">Training date:</string>
    <string name="last_training_duration">Training duration:</string>
    <!-- ExerciseRecyclerView -->
    <string name="placeholder_missing_note">No notes.</string>
    <string name="display_volume_of_exercise">Volume:</string>
    <!-- ExerciseTableRecyclerView -->
    <string name="column_repetition">Repetitions:</string>
    <string name="column_weight">Weight:</string>
    <string name="column_time">Time:</string>
    <string name="column_distance">Distance:</string>

    <!-- Custom alert dialogs -->
    <string name="alertdialog_export_plans">Export plans</string>
    <string name="alertdialog_export_exercises">Export exercises</string>
    <string name="alertdialog_import_plans">Import plans</string>
    <string name="alertdialog_import_exercises">Import exercises</string>

    <!-- Often used -->
    <string name="edit_notes">Edit notes...</string>
    <string name="search_exercises">Search for an exercise</string>
    <string name="delete_item_callback">Do you want to delete this item?</string>
    <string name="button_apply">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="notification_empty">Nothing added yet.</string>
    <string name="button_save">Save</string>

    <!-- Error messages -->
    <string name="error_notification_not_inserted">New Entry not inserted (Code: 1)</string>
    <string name="error_missing_column">Error: Missing Column (Code: -1)</string>
    <string name="error_updating_entry">Entry not updated (Code: 2)</string>
    <string name="error_exercise_not_found">Exercise not found (Code: -2)</string>
    <string name="error_no_write_permission">Error: No writing permissions (Code: 3)</string>
    <string name="error_missing_plan">Couldn\'t load plan data (Code: -3)</string>
    <string name="error_exporting_failed">Error: Exporting failed (Code: 4)</string>
    <string name="error_importing_failed">Error: Importing failed (Code -4)</string>

    <!-- Todo: Filter strings -->
    <string name="setting_style">Style:</string>
    <string name="notification_succesful_inserted">New entry inserted.</string>

    <string name="notification_position">You are already there!</string>
    <string name="notification_succesful_updated">Entry updated</string>
    <string name="error_index_out_of_bounds_exception" translatable="false">IndexOutOfBoundsException</string>
<!--    <string name="leave_editor_callback">Do you really want to leave? - Every changes will be lost.</string>-->
<!--    <string name="confirm_to_leave_bottom_save">Save and leave</string>-->
<!--    <string name="confirm_to_leave_bottom_ignore">Ignore these changes</string>-->
<!--    <string name="leave_training_callback">Do you really want to leave? - All trainings data will be deleted.</string>-->
    <string name="error_no_valid_data">Please enter all data correctly.</string>
    <string name="preferences_language_selector">Select language</string>
    <string name="preferences_language_selector_summary">Select your preferred language</string>
    <string name="notification_reminder_for_training">Don\'t forget to keep going.</string>
    <string name="update_available_notification">There is a new version of GymTrim available!</string>
    <string name="notification_exercise_added_to_plan">Added.</string>
</resources>