<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end"
    android:orientation="vertical"
    android:scrollIndicators="end"
    android:background="?android:attr/colorBackground"
    android:scrollbars="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_WHR"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/RadioGroup_genus_WHR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_male_WHR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/radioButton_female_WHR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_female" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_waist_girth_WHR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/get_waist_girth"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_hip_girth_WHR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/get_hip_girth"
            android:inputType="number|numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_Apply_WHR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="Apply"
        app:srcCompat="@drawable/check_icon" />

    <TextView
        android:id="@+id/TextView_WHRValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/nothing_calculated_yet"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView_Informations_WHR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_warranty_note_WHR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/info_icon"
        android:drawableTint="#7C7878"
        android:text="@string/no_warranty_note"
        android:textColor="#7C7878"
        android:textSize="12sp" />

</LinearLayout>