<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/material_you_bottom_sheet_background"
    android:gravity="end"
    android:orientation="vertical"
    android:scrollIndicators="end"
    android:scrollbars="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/calculate_BMI"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_Size_BMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/get_size"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditText_BMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/get_weight"
                android:inputType="number|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_Apply_BMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:clickable="true"
            android:contentDescription="Apply"
            app:srcCompat="@drawable/check_icon" />
    </LinearLayout>

    <View
        android:id="@+id/view_HorizontalSeparator7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="?attr/colorOutlineVariant" />

    <TextView
        android:id="@+id/TextView_BMIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/nothing_calculated_yet"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_warranty_note_BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:drawableLeft="@drawable/info_icon"
        android:drawableTint="#7C7878"
        android:text="@string/no_warranty_note"
        android:textColor="#7C7878"
        android:textSize="12sp" />

</LinearLayout>